src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>No_on_course__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please specify the number of people to be placed on this course</inlineHelpText>
        <label>No. on course</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_VAT__c</fullName>
        <formula>TotalPrice + (20/100 *  TotalPrice )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price + VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Date_From__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>For this particular Product, please specify the training dates if known</inlineHelpText>
        <label>Training Date From:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Date_To__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please specify Training end date if known</inlineHelpText>
        <label>Training Date To:</label>
        <type>Date</type>
    </fields>
</CustomObject>